--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "axios": "^1.3.2",
     "mochawesome": "^7.1.3",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
+    "react-debounced": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
